# advent-of-code-2020

./: .gitignore  CMakeLists.txt
advent_of_code/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day1_a.cpp  day1_b.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day2_a.cpp  day2_b.cpp  day3.cpp  day3.hh  day3_a.cpp  day3_b.cpp  day4.cpp  day4.hh  day4_a.cpp  day4_b.cpp  day5.cpp  day5.hh  day5_a.cpp  day5_b.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  dayXX.cpp.template  lib.cpp  lib.hh  ndarray.hh
advent_of_code/aoc/: conversions.hh  debug.hh  mathematics.hh  multi_array.hh  ndarray.hh  task.hh
