# CMakeList.txt : CMake project for advent_of_code, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH "..")

# Add source to this project's executable.
add_executable (day1 "day1.cpp" )
add_executable (day2 "day2.cpp" )
add_executable (day3 "day3.cpp" )
add_executable (day4 "day4.cpp" )
add_executable (day5 "day5.cpp" )
add_executable (day6 "day6.cpp" )
add_executable (day7 "day7.cpp" )
add_executable (day8 "day8.cpp" )
add_executable (day9 "day9.cpp" )
add_executable (day10 "day10.cpp" )
add_executable (day11 "day11.cpp" )
add_executable (day12 "day12.cpp" )
add_executable (day13 "day13.cpp" )
add_executable (day14 "day14.cpp" )
add_executable (day15 "day15.cpp" )
add_executable (day16 "day16.cpp" )

